deployment/Security_Group.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters": {
    "VPCID": {
      "Type": "String",
      "Description": "Put your vpc-id.Leave default if you don't want to put anyother vpc id.",
	  "Default": "vpc-0b2cfa1a86b9a72b5"
    }
  },
  "Resources": {
    "PublicSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SG for App Server",
        "GroupName": "App_Server_Security_Group",
        "VpcId": {
          "Ref": "VPCID"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Security_Group_App_Server"
          }
        ],
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "103.204.169.63/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    }
  }
}
